Resolves: fdo#75121 align checkbox with message text

Change-Id: Ib8379cbdb6cf16f8799c1e34b9bd7ff2e62e27f4