sfx2/source/dialog/alienwarn.cxx
@@ -22,12 +22,17 @@
 #include <sfx2/sfxresid.hxx>
 #include <sfx2/sfxuno.hxx>
 #include <unotools/saveopt.hxx>
+#include <vcl/msgbox.hxx>
 #include "alienwarn.hxx"
 
 SfxAlienWarningDialog::SfxAlienWarningDialog(Window* pParent, const OUString& _rFormatName)
     : MessageDialog(pParent, "AlienWarnDialog", "sfx/ui/alienwarndialog.ui")
 {
     get(m_pWarningOnBox, "ask");
+    //fdo#75121, a bit tricky because the widgets we want to align with
+    //don't actually exist in the ui description, they're implied
+    m_pWarningOnBox->set_margin_left(QueryBox::GetStandardImage().GetSizePixel().Width() + 12);
+
     get(m_pKeepCurrentBtn, "save");
 
     // replace formatname (text)
